// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pagination pagination slot behavior less than 7 pages should show all pages 1`] = `
<ul>
  <Page
    href="/test"
    index={1}
    isActive={true}
    key="page-1"
    onPageChange={[Function]}
  />
  <Page
    href="/test"
    index={2}
    isActive={false}
    key="page-2"
    onPageChange={[Function]}
  />
  <Page
    href="/test"
    index={3}
    isActive={false}
    key="page-3"
    onPageChange={[Function]}
  />
  <Page
    href="/test"
    index={4}
    isActive={false}
    key="page-4"
    onPageChange={[Function]}
  />
  <Page
    href="/test"
    index={5}
    isActive={false}
    key="page-5"
    onPageChange={[Function]}
  />
</ul>
`;

exports[`Pagination should render component 1`] = `
<nav
  aria-label="Pagination"
  className="ds-c-pagination"
>
  <Button
    aria-label="Previous Page"
    className="ds-c-pagination__nav"
    component="button"
    href="/test"
    onClick={[Function]}
    type="button"
    variation="transparent"
  >
    <span
      className="ds-c-pagination__nav--img-container ds-c-pagination__nav--img-container-previous"
    >
      <ArrowIcon
        className="ds-c-pagination__nav--image"
        direction="left"
      />
    </span>
    Previous
  </Button>
  <ul>
    <Page
      href="/test"
      index={1}
      isActive={false}
      key="page-1"
      onPageChange={[Function]}
    />
    <Page
      href="/test"
      index={2}
      isActive={true}
      key="page-2"
      onPageChange={[Function]}
    />
    <Page
      href="/test"
      index={3}
      isActive={false}
      key="page-3"
      onPageChange={[Function]}
    />
  </ul>
  <Button
    aria-label="Next Page"
    className="ds-c-pagination__nav"
    component="button"
    href="/test"
    onClick={[Function]}
    type="button"
    variation="transparent"
  >
    Next
    <span
      className="ds-c-pagination__nav--img-container ds-c-pagination__nav--img-container-next"
    >
      <ArrowIcon
        className="ds-c-pagination__nav--image"
        direction="right"
      />
    </span>
  </Button>
</nav>
`;

exports[`Pagination with compact prop enabled should render compact variant 1`] = `
<nav
  aria-label="Pagination"
  className="ds-c-pagination"
>
  <Button
    aria-label="Previous Page"
    className="ds-c-pagination__nav"
    component="button"
    href="/test"
    onClick={[Function]}
    type="button"
    variation="transparent"
  >
    <span
      className="ds-c-pagination__nav--img-container ds-c-pagination__nav--img-container-previous"
    >
      <ArrowIcon
        className="ds-c-pagination__nav--image"
        direction="left"
      />
    </span>
    Previous
  </Button>
  <span
    className="ds-c-pagination__page-count"
  >
    Page 
    <strong>
      2
    </strong>
     of 
    <strong>
      3
    </strong>
  </span>
  <Button
    aria-label="Next Page"
    className="ds-c-pagination__nav"
    component="button"
    href="/test"
    onClick={[Function]}
    type="button"
    variation="transparent"
  >
    Next
    <span
      className="ds-c-pagination__nav--img-container ds-c-pagination__nav--img-container-next"
    >
      <ArrowIcon
        className="ds-c-pagination__nav--image"
        direction="right"
      />
    </span>
  </Button>
</nav>
`;
